Work on emed